--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ li:hover {
 .card {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      gap: 25px;
+      gap: 15px;
       width: 100%;
       height: 100%;
       border-radius: 15px;   
@@ -434,12 +434,14 @@ li:hover {
             width: 270px;
         }
       footer {
+            display: flex;
             grid-column: span 12;
             text-align: center;
-            font-size: 0.8rem;
+            font-size: 14px;
             font-weight: lighter;
-            margin-top: 25rem;
+            margin-top: 74rem;
             margin-bottom: 0.5rem;
+            ;
       }  
 }
 
