--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ footer {
       font-size: 1.6rem;
       font-weight: lighter;
       margin-top: 45rem;
+      position: relative;
 }
 
 #video-player {
